templates/app/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __APP_NAME__
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - __HOST__
    secretName: __APP_NAME__-tls
  rules:
  - host: __HOST__
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: __APP_NAME__
            port:
              number: __PORT__
